--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
               
             </ul>
             <div class="d-flex">
-              <a class="btn btn-primary" href="">Signup</a>
+              <a class="btn btn-primary" href="{% url 'user_signup' %}">Signup</a>
               <a class="btn btn-info mx-3" href="">Login</a>
             </div>
           </div>
